# Vacare-App

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  docker-compose.dev.yml  docker-compose.yml
Vacare-App-r001/backend/: requirements.txt  routers.json
docker/: .env.production.example  entrypoint.sh  nginx.conf
explore-yourself (1)/frontend/: package.json
explore-yourself (3)/backend/: routers.json
explore-yourself (3)/frontend/: .env
explore-yourself (4)/backend/: routers.json
explore-yourself (5)/backend/: routers.json
explore-yourself (6)/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  dockerignore
explore-yourself (6)/Elements_data/: all-career-clusters-1-csv  elements-abilities-csv  elements-interests-csv  elements-knowledge-2-csv  elements-scales-reference-csv  elements-skills-csv
explore-yourself (6)/backend/: pyproject.toml  routers.json
explore-yourself (6)/backend/app/apis/career_recommendation/: __init__.py
explore-yourself (6)/backend/app/apis/career_reports/: __init__.py
explore-yourself (6)/backend/app/apis/report_generation/: __init__.py
explore-yourself (6)/backend/app/apis/user_data/: __init__.py
explore-yourself (6)/backend/app/services/: firebase.py
explore-yourself (6)/backend/tests/: test_career_reports.py
explore-yourself (6)/docker/: supervisord.conf
explore-yourself (6)/docs/: PRD.md  TRD.md  changes-since-2025-09-21-1130.md
번역직전 explore-yourself/frontend/: .env  (+1 more)
(+121 files in other folders)
