[project]
name = "apis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "fpdf2>=2.7.8",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
